--- a/club-responsible/app/index.html
+++ b/club-responsible/app/index.html
@@ -100,7 +100,7 @@
                   <td class="headerNL__blank"></td>
                 </tr>
                 <tr>
-                  <td class="headerNL__phraseAccroche" align="center">Phytosanitaires : commandez aujourd'hui, soyez livré au plus tard dans 72h 
+                  <td class="headerNL__phraseAccroche" align="center">Phytosanitaires : commandez aujourd'hui, soyez livré au plus tard dans 72h
                   </td>
                 </tr>
                 <tr>
@@ -181,96 +181,47 @@
                         </tr>
                         -->
                                                 <tr>
-                                                  <td width="650" align="center" tyle="width: 100%; max-width: 650px; "><a href="undefinedtestundefined"><img class="full--img" src="https://www.agriconomie.com/media/image/newsletters/inl_5ac4c55d87227.jpeg" alt="test" width="650" style="width: 100%; max-width: 650px; ;"></a></td>
+                                                  <td> </td>
                                                 </tr>
-                        <tr>
-                          <td height="5" style="font-size:5px; line-height:5px;">&nbsp;  </td>
-                        </tr>
-                        <tr>
-                          <td align="center">du 5 au 10 Avril 2018</td>
-                        </tr>
-                        <tr>
-                          <td>&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td align="center">
-                            <table width="80%" align="center">
-                              <tbody>
-                                <tr>
-                                  <td style="font-size: 16px; line-height:16px;">
-                                     Nous vous avons préparé une <b style="font-weight:bold;">vente privée spéciale phytosanitaires.</b></td>
-                                </tr>
-                                <tr>
-                                  <td>&nbsp;</td>
-                                </tr>
-                                <tr>
-                                  <td>
-                                     Des <b style="font-weight:bold;">supers avantages vous attendent : </b></td>
-                                </tr>
-                                <tr>
-                                  <td>&nbsp;</td>
-                                </tr>
-                                <tr>
-                                  <td>- Plus de <b style="font-weight:bold;">130 produits disponibles</b></td>
-                                </tr>
-                                <tr>
-                                  <td>- Livraison sous <b style="font-weight:bold;">3 jours</b></td>
-                                </tr>
-                                <tr>
-                                  <td>
-                                     - Accés au Club by Agrico <b style="font-weight:bold;">pendant 5 jours </b>( <a style="font-size:11px; text-decoration: underline; color:#ffc653; font-weight:bold;" href="https://www.agriconomie.com/publi/le-club"> Qu'est ce que le Club ?</a> )</td>
-                                </tr>
-                                <tr>
-                                  <td>&nbsp;</td>
-                                </tr>
-                                <tr>
-                                  <td>et une autre surprise vous attends en saisissant <b style="font-weight:bold;">ce code </b>sur la page suivante :</td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td align="center">
-                            <table width="200" align="center">
-                              <tbody>
-                                <tr>
-                                  <td style="background: #ffc653; color:black; text-transform:uppercase; font-weight:bold; font-size:18px; line-height:24px; ;" align="center">VP-PHYTO-2018</td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td>&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td align="center">
-                            <table width="50%" align="center">
-                              <tr>
-                                <td class="products__btn" align="center" width="100%" style="border-collapse: collapse; mso-line-height-rule: exactly;">
-                                  <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                                    <tr>
-                                      <td align="center" width="100%" style=" border-collapse: collapse; mso-line-height-rule: exactly;"><!--[if mso]>
-                                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://preprod.agriconomie.com/publi/vente-privee-phytosanitaires" style="height:30px;v-text-anchor:middle;width:200px;" arcsize="5%" strokecolor="#52c47d" fillcolor="#52c47d">
-                                          <w:anchorlock>
-                                            <center style="color:#fff;font-family:Helvetica, Arial,sans-serif;font-size:14px;">J'en profite</center>
-                                          </w:anchorlock>
-                                        </v:roundrect><![endif]--><a href="https://preprod.agriconomie.com/publi/vente-privee-phytosanitaires" style=" font-family:Arial,Helvetica,sans-serif;background-color: #52c47d; border: 1px solid #52c47d; border-radius: 3px; color: #fff; display: inline-block; font-family: sans-serif; font-size: 14px; line-height: 30px; text-align: center; text-decoration: none; width: 95%; -webkit-text-size-adjust: none; mso-hide: all; font-weight: bold;">J'en profite !</a>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
+                                                <tr>
+                                                  <td width="100%" align="center" style="border-collapse: collapse;">
+                                                    <table class="club__promo" align="center" width="95%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
+                                                      <tr>
+                                                        <td class="club__promo_img" width="50%" align="center" style="border-collapse: collapse;"><a href="https://www.agriconomie.com/soufre-thiosulfate-d-ammonium/p265452?utm_source=grliste&amp;utm_medium=email&amp;utm_campaign=club-by-agrico-S14-2018" style="color: black; text-decoration: none;"><img class="deviceWith" alt="soufre thiosulfate d'ammonium" src="https://www.agriconomie.com/media/pub/img/newsletter/club/S11-2018_crea_azote-soufre.jpg" border="0" style="border: 0px none; display: block; line-height: 100%; max-width: 100%; outline: none; text-decoration: none; width: 100%;"></a></td>
+                                                        <td class="club__promo_description" bgcolor="#fafafa" width="50%" align="center" style="border: 1px solid rgb(238, 238, 238); border-collapse: collapse; color: rgb(52, 58, 70); font-family: Arial, Helvetica, sans-serif; font-size: 17px; line-height: 20px;"><a href="https://www.agriconomie.com/soufre-thiosulfate-d-ammonium/p265452?utm_source=grliste&amp;utm_medium=email&amp;utm_campaign=club-by-agrico-S14-2018" style="color: black; text-decoration: none;">
+                                                            <table width="80%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
+                                                              <tr class="ShowInMobile" style="display: none;">
+                                                                <td style="border-collapse: collapse;"></td>
+                                                              </tr>
+                                                              <tr>
+                                                                <td style="border-collapse: collapse; font-size: 10px; line-height: 10px;">&nbsp;</td>
+                                                              </tr><tr><td>&nbsp;</td></tr><tr><td align='center' style='border-collapse: collapse; font-size: 20px; line-height: 24px; font-weight: bold;'class='club__promo_description--title'>Groupama, acteur historique de la prévention au côté des agriculteurs</td></tr><tr><td style='border-collapse: collapse; line-height: 10px; font-size: 10px;'>&nbsp;</td></tr><tr><td align='center' style='border-collapse: collapse;  font-size: 14px; line-height: 16px;'>Tracteurs neufs ou anciens, matériels attelés de dernière génération ou tous autres matériels agricoles : tous sont indispensables au bon fonctionnement de votre exploitation agricole et représentent des investissements lourds. Ils se doivent d’être bien protégés et en toutes circonstances. Cette protection s’étend aux utilisateur de vos engins agricoles pendant la conduite et la manipulation.</td></tr><tr><td style='border-collapse: collapse; line-height: 10px; font-size: 10px;'>&nbsp;</td></tr> <tr><td style='border-collapse: collapse;'>&nbsp;</td></tr>
+                                                              <tr>
+                                                                <td style="border-collapse: collapse; font-size: 10px; line-height: 10px;">&nbsp;</td>
+                                                              </tr>
+                                                              <tr>
+                                                                <td class="club__promo_description--btn" align="center" width="100%" style="background-color: rgb(82, 196, 125); border: 1px solid rgb(82, 196, 125); border-collapse: collapse; border-radius: 3px; color: rgb(255, 255, 255); display: block; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: bold; line-height: 40px; text-align: center; text-decoration: none;">
+                                                                  <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="border-collapse: collapse;">
+                                                                    <tr>
+                                                                      <td align="center" width="100%" style="border-collapse: collapse;"><!--[if mso]>
+                                                                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://www.agriconomie.com/soufre-thiosulfate-d-ammonium/p265452?utm_source=grliste&amp;utm_medium=email&amp;utm_campaign=club-by-agrico-S14-2018" style="text-align:center;height:60px;v-text-anchor:middle;width:200px;" arcsize="5%" strokecolor="#52c47d" fillcolor="#52c47d">
+                                                                          <w:anchorlock>
+                                                                            <center style="color:#fff;font-family:Helvetica, Arial,sans-serif;font-size:14px;">Voir le produit</center>
+                                                                          </w:anchorlock>
+                                                                        </v:roundrect><![endif]--><a href="https://www.agriconomie.com/soufre-thiosulfate-d-ammonium/p265452?utm_source=grliste&amp;utm_medium=email&amp;utm_campaign=club-by-agrico-S14-2018" style="text-size-adjust: none; background-color: rgb(82, 196, 125); border: 1px solid rgb(82, 196, 125); border-radius: 3px; color: rgb(255, 255, 255); display: inline-block; font-family: sans-serif; font-size: 14px; font-weight: bold; line-height: 30px; text-align: center; text-decoration: none; width: 95%;">Voir le produit</a>
+                                                                      </td>
+                                                                    </tr>
+                                                                  </table>
+                                                                </td>
+                                                              </tr>
+                                                              <tr class="showInMobile">
+                                                                <td style="border-collapse: collapse;">&nbsp;</td>
+                                                              </tr>
+                                                            </table></a></td>
+                                                      </tr>
+                                                    </table>
+                                                  </td>
+                                                </tr>
                         <tr>
                           <td> </td>
                         </tr>
@@ -489,10 +440,10 @@
                                     <table class="footer__rss" align="center" cellpadding="0" cellspacing="0" border="0" width="100%">
                                       <tbody>
                                         <tr>
-                                          <td width="25%" align="center"><a style="text-decoration:none;" href="https://twitter.com/agriconomie" target="_blank"><img height="30" width="30" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/twitter.png" alt="Twitter"></a></td>
-                                          <td width="25%" align="center"><a style="text-decoration:none;" href="https://www.facebook.com/Agriconomie/" target="_blank"><img height="30" width="30" alt="Facebook" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/facebook.png"></a></td>
-                                          <td width="25%" align="center"><a style="text-decoration:none;" href="https://fr.linkedin.com/company/agriconomie-france" target="_blank"><img height="30" width="30" alt="LinkedIn" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/linkedin.png"></a></td>
-                                          <td width="25%" align="center"><a style="text-decoration:none;" href="https://www.youtube.com/channel/UCo0QMlZUcF-WBP3C9koTLJw" target="_blank"><img height="30" width="30" alt="Youtube" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/youtube.png"></a></td>
+                                          <td width="25%" align="center"><a style="text-decoration:none" href="https://twitter.com/agriconomie" target="_blank"><img height="30" width="30" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/twitter.png" alt="Twitter"></a></td>
+                                          <td width="25%" align="center"><a style="text-decoration:none" href="https://www.facebook.com/Agriconomie/" target="_blank"><img height="30" width="30" alt="Facebook" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/facebook.png"></a></td>
+                                          <td width="25%" align="center"><a style="text-decoration:none" href="https://fr.linkedin.com/company/agriconomie-france" target="_blank"><img height="30" width="30" alt="LinkedIn" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/linkedin.png"></a></td>
+                                          <td width="25%" align="center"><a style="text-decoration:none" href="https://www.youtube.com/channel/UCo0QMlZUcF-WBP3C9koTLJw" target="_blank"><img height="30" width="30" alt="Youtube" src="https://www.agriconomie.com/media/pub/img/newsletter/footer/youtube.png"></a></td>
                                         </tr>
                                       </tbody>
                                     </table>
